[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Scenes/Replay/Replay.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Viewer/Viewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/tilemap.png" type="Texture" id=3]
[ext_resource path="res://Assets/PlayButton.tres" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 1656, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 1656, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 72, 1656, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 120, 1656, 24, 24 )

[node name="Replay" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer"]
size = Vector2( 800, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Viewer" parent="HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="Menu" type="ColorRect" parent="."]
margin_left = 800.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Import" type="Button" parent="Menu/VBoxContainer"]
margin_right = 208.0
margin_bottom = 20.0
text = "Importer"

[node name="Controls" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 208.0
margin_bottom = 54.0
alignment = 1

[node name="Start" type="Button" parent="Menu/VBoxContainer/Controls"]
margin_left = 6.0
margin_right = 42.0
margin_bottom = 30.0
icon = SubResource( 1 )

[node name="Prev" type="Button" parent="Menu/VBoxContainer/Controls"]
margin_left = 46.0
margin_right = 82.0
margin_bottom = 30.0
icon = SubResource( 2 )

[node name="PlayPause" type="Button" parent="Menu/VBoxContainer/Controls"]
margin_left = 86.0
margin_right = 122.0
margin_bottom = 30.0
icon = ExtResource( 4 )

[node name="Next" type="Button" parent="Menu/VBoxContainer/Controls"]
margin_left = 126.0
margin_right = 162.0
margin_bottom = 30.0
icon = SubResource( 3 )

[node name="End" type="Button" parent="Menu/VBoxContainer/Controls"]
margin_left = 166.0
margin_right = 202.0
margin_bottom = 30.0
icon = SubResource( 4 )

[node name="StateInfo" type="Label" parent="Menu/VBoxContainer"]
margin_top = 58.0
margin_right = 208.0
margin_bottom = 72.0
text = "Tour: 42/200 (J1)"
align = 1

[node name="ScoreJ1" type="Label" parent="Menu/VBoxContainer"]
margin_top = 76.0
margin_right = 208.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0.545098, 0.839216, 1, 1 )
text = "J1: 42618"

[node name="ScoreJ2" type="Label" parent="Menu/VBoxContainer"]
margin_top = 94.0
margin_right = 208.0
margin_bottom = 108.0
custom_colors/font_color = Color( 1, 0.776471, 0.705882, 1 )
text = "J2: 31442"

[node name="Back to main menu" type="Button" parent="Menu/VBoxContainer"]
margin_top = 112.0
margin_right = 208.0
margin_bottom = 132.0
text = "Back to main menu"

[node name="GridOpacity" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 136.0
margin_right = 208.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="Menu/VBoxContainer/GridOpacity"]
margin_top = 1.0
margin_right = 86.0
margin_bottom = 15.0
text = "Opacit√© grille"

[node name="GridOpacitySlider" type="HSlider" parent="Menu/VBoxContainer/GridOpacity"]
margin_left = 90.0
margin_right = 208.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
tick_count = 5

[node name="Popups" type="Node" parent="."]

[node name="ImportDialog" type="FileDialog" parent="Popups"]
margin_right = 622.0
margin_bottom = 338.0
popup_exclusive = true
window_title = "Ouvrir un fichier"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )

[node name="TickTimer" type="Timer" parent="."]

[connection signal="bg_drag" from="HBoxContainer/ViewportContainer/Viewport/Viewer" to="." method="_on_Viewer_bg_drag"]
[connection signal="bg_left_click" from="HBoxContainer/ViewportContainer/Viewport/Viewer" to="." method="_on_Viewer_bg_left_click"]
[connection signal="bg_right_click" from="HBoxContainer/ViewportContainer/Viewport/Viewer" to="." method="_on_Viewer_bg_right_click"]
[connection signal="pressed" from="Menu/VBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Controls/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Controls/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Controls/PlayPause" to="." method="_on_PlayPause_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Controls/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Controls/End" to="." method="_on_End_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Back to main menu" to="." method="_on_Back_to_main_menu_pressed"]
[connection signal="value_changed" from="Menu/VBoxContainer/GridOpacity/GridOpacitySlider" to="HBoxContainer/ViewportContainer/Viewport/Viewer" method="_on_GridOpacitySlider_value_changed"]
[connection signal="about_to_show" from="Popups/ImportDialog" to="." method="_on_ImportDialog_about_to_show"]
[connection signal="file_selected" from="Popups/ImportDialog" to="." method="_on_ImportDialog_file_selected"]
[connection signal="popup_hide" from="Popups/ImportDialog" to="." method="_on_ImportDialog_popup_hide"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
